Added a Sound Block and Strawberry.

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,7 +1,8 @@
 {
   "item.tutorialmod.sapphire": "Sapphire",
   "item.tutorialmod.raw_sapphire": "Raw Sapphire",
-  "item.tutorialmod.metal_detector": "Seth is a Butte",
+  "item.tutorialmod.metal_detector": "Metal Detector",
+  "item.tutorialmod.strawberry": "Strawberry",
 
   "block.tutorialmod.sapphire_block": "Block of Sapphire",
   "block.tutorialmod.raw_sapphire_block": "Block of Raw Sapphire",
@@ -10,6 +11,8 @@
   "block.tutorialmod.deepslate_sapphire_ore": "Deepslate Sapphire Ore",
   "block.tutorialmod.nether_sapphire_ore": "Nether Sapphire Ore",
   "block.tutorialmod.end_stone_sapphire_ore": "Endstone Sapphire Ore",
+
+  "block.tutorialmod.sound_block": "Sound Block",
 
   "creativetab.tutorial_tab": "Sapphire Tutorial Tab"
 }
