--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -15,5 +15,8 @@
 
   "block.tutorialmod.sound_block": "Sound Block",
 
+  "tooltip.tutorialmod.metal_detector.tooltip": "Finds valuables underground.",
+  "tooltip.tutorialmod.sound_block.tooltip": "Makes sweet sounds when right-clicked.",
+
   "creativetab.tutorial_tab": "Sapphire Tutorial Tab"
 }
