--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,8 +1,13 @@
 {
   "item.tutorialmod.sapphire": "Sapphire",
   "item.tutorialmod.raw_sapphire": "Raw Sapphire",
+
   "item.tutorialmod.metal_detector": "Metal Detector",
+
   "item.tutorialmod.strawberry": "Strawberry",
+  "item.tutorialmod.chick_fil_a_chicken": "Chick-Fil-A Chicken",
+  "item.tutorialmod.chick_fil_a_menu": "Chick-Fil-A Menu",
+
   "item.tutorialmod.pine_cone": "Pine Cone",
 
   "block.tutorialmod.sapphire_block": "Block of Sapphire",
