--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -6,6 +6,7 @@
 
   "item.tutorialmod.strawberry": "Strawberry",
   "item.tutorialmod.chick_fil_a_chicken": "Chick-Fil-A Chicken",
+  "item.tutorialmod.chick_fil_a_deluxe": "Chick-Fil-A Deluxe",
   "item.tutorialmod.chick_fil_a_menu": "Chick-Fil-A Menu",
 
   "item.tutorialmod.pine_cone": "Pine Cone",
